--- a/login.html
+++ b/login.html
@@ -54,12 +54,12 @@
                     </div>
                     <h2 class="text-2x1 font-bold text-white mb-6">Register</h2>
                     <div class="inputbox relative mb-4">
-                        <input type="fullname" id="fullname" required
+                        <input type="text" id="fullname" required
                             class="w-full h-12 bg-transparent border-b-2 border-white text-white outline-none focus:border-gray-300 mt-2" />
                         <label for="fullname" class="absolute left-0 transition-all text-white">Fullname</label>
                     </div>
                     <div class="inputbox relative mb-4">
-                        <input type="username" id="username" required
+                        <input type="text" id="username" required
                             class="w-full h-12 bg-transparent border-b-2 border-white text-white outline-none focus:border-gray-300 mt-2" />
                         <label for="username" class="absolute left-0 transition-all text-white">Username</label>
                     </div>
@@ -79,9 +79,9 @@
                         <label for="password" class="absolute left-0 transition-all text-white">Password</label>
                     </div>
                     <div class="inputbox relative mb-4">
-                        <input type="password" id="password" required
+                        <input type="password" id="repeatpassword" required
                             class="w-full h-12 bg-transparent border-b-2 border-white text-white outline-none focus:border-gray-300 mt-2" />
-                        <label for="password" class="absolute left-0 transition-all text-white">Repeat Password</label>
+                        <label for="repeatpassword" class="absolute left-0 transition-all text-white">Repeat Password</label>
                     </div>
                     <button type="submit" value="Open"
                         class="submit w-full h-10 bg-white rounded-full text-black font-semibold text-lg cursor-pointer hover:bg-gray-400">Submit
